--- a/requirements.txt
+++ b/requirements.txt
@@ -4,12 +4,13 @@ distlib==0.3.8
 dj-database-url==2.2.0
 Django==5.0.6
 django-cors-headers==4.4.0
-django-livereload-server==0.5.1
 djangorestframework==3.15.2
 gunicorn==23.0.0
 mysqlclient==2.2.4
 packaging==24.1
 psycopg2-binary==2.9.9
+sqlparse==0.5.1
+typing_extensions==4.12.2
 tzdata==2024.1
 uvicorn==0.31.1
 virtualenv==20.26.2
